Polish pom.xml: add comments, fix argLine